gateway caching added

--- a/docs/howtos/solutions/caching/index-caching.mdx
+++ b/docs/howtos/solutions/caching/index-caching.mdx
@@ -288,5 +288,5 @@ That's all there is to it! You've now seen how to use Redis for caching with one
 ### Additional Resources
 
 - [CQRS](/howtos/solutions/cqrs)
-- [Query caching](/howtos/solutions/caching)
+- [Interservice communication](/howtos/solutions/interservice-communication)
 - [API gateway caching](/howtos/solutions/api-gateway-caching)
