--- a/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
@@ -10,7 +10,14 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-<!-- TODO: Link to github repo -->
+:::tip GITHUB CODE
+
+Source code for the application used in this tutorial
+
+https://github.com/redis-developer/redis-microservices-ecommerce-solutions
+:::
+
+## API Gateway Caching
 
 So you are building a microservices application, but you're struggling with how to handle authentication in a way that let's you reuse code and maximize performance. Typically for authentication you might you sessions, oauth, authorization tokens, etc. For the purposes of this tutorial, let's say we're using an authorization token. In a monolithic application authentication is pretty straightforward:
 When a request comes in...
@@ -27,9 +34,9 @@ Great, you've decided to handle authentication at the API gateway layer. Now you
 
 Redis is an in-memory datastore, making it perfect for caching session data. It allows you to reduce the load on your primary database while speeding up database reads. The rest of this tutorial covers how to do this in the context of an e-commerce application.
 
-### Using Redis for API Gateway Caching
+## Ecommerce (event-driven) architecture
 
-Thinking about the e-commerce application, consider the following architecture:
+You eventually land on the following architecture:
 
 1. `products service` - handles querying products from the database and returning them to the frontend
 1. `orders service` - handles validating and creating orders
@@ -37,23 +44,44 @@ Thinking about the e-commerce application, consider the following architecture:
 1. `payments service` - handles processing orders for payment
 1. `api gateway` - unifies your services under a single endpoint
 1. `mongodb` - serves as the primary database, storing orders, order history, products, etc.
-1. `redis` - serves as the stream processor and caching database
 
-Here is what the architecture diagram looks like:
+Here is what the architecture diagram looks like so far:
 
-![Microservices architecture with Redis](images/microservices-architecture-with-redis.png)
+![Initial CQRS architecture](images/microservices-architecture-with-redis.png)
 
-What's nice about this architecture is each service is setup so it can scale independently. Now, seeing as how each service might require authentication, you will likely want to obtain session information for almost every request. So it makes a lot of sense to use the API gateway to cache and retrieve session information, and subsequently pass the information on to each service. Let's see how you might accomplish this.
+## Ecommerce product
+
+Consider below e-commerce application,
+
+- Dashboard to populate list of products
+
+  [TODO: dashboard image]
+
+- Shopping Cart to view added products
+  ![Shopping app frontend with Redis and MongoDB](images/frontend-cqrs-app-with-redis-and-mongodb.png)
+
+- Order confirmation page
+
+  [TODO: payment confirmation image]
+
+- Order history view (on Orders tab click in the top nav bar)
+
+  [TODO: order history image]
+
+You can find the full source code for the app pictured above here. The frontend is build using **Next.js**, the backend is in **Node.js**, data is stored in **MongoDB** and **Redis**.
+
+:::tip GITHUB CODE
+
+Source code for the application
+
+https://github.com/redis-developer/redis-microservices-ecommerce-solutions
+:::
 
 ## Sample API Gateway Caching Application with Redis and MongoDB
 
-![Shopping app frontend with Redis and MongoDB](images/frontend-caching-app-with-redis-and-mongodb.png)
+What's nice about microservice architecture is each service is setup so it can scale independently. Now, seeing as how each service might require authentication, you will likely want to obtain session information for almost every request. So it makes a lot of sense to use the API gateway to cache and retrieve session information, and subsequently pass the information on to each service. Let's see how you might accomplish this.
 
-<!-- TODO: Link to github repo -->
-
-You can find the full source code for the app pictured above here. The frontend is build using Next.js, and the backend is in Node.js.
-
-In our sample application, all requests are routed through the API gatway. We are using Express to setup our API gateway and we're using the `Authorization` hearder to pass the authorization token from the frontend to the API. For every request, the API gateway gets the authorization token and looks it up in Redis. Then it passes it along to the correct microservice. Below you will find the code to validate the session:
+In our sample application, all requests are routed through the API gateway. We are using Express to setup our API gateway and we're using the `Authorization` header to pass the authorization token from the frontend to the API. For every request, the API gateway gets the authorization token and looks it up in Redis. Then it passes it along to the correct microservice. Below you will find the code to validate the session:
 
 ```typescript
 import {
@@ -61,61 +89,104 @@ import {
   responseInterceptor,
 } from 'http-proxy-middleware';
 
+//-----
+const app: Express = express();
+
+app.use(cors());
 app.use(async (req, res, next) => {
   const authorizationHeader = req.header('Authorization');
-  let sessionId = '';
+  const sessionInfo = await getSessionInfo(authorizationHeader); //---- (1)
 
-  if (!!authorizationHeader) {
-    sessionId = authorizationHeader.split(/\s/)[1] as string;
-  } else {
-    sessionId = randomUUID();
+  //add session info to request
+  if (sessionInfo?.sessionData && sessionInfo?.sessionId) {
+    req.session = sessionInfo?.sessionData;
+    req.sessionId = sessionInfo?.sessionId;
   }
-
-  const redis = getNodeRedisClient() as NodeRedisClientType;
-
-  if (!(await redis.exists(sessionId))) {
-    await redis.set(sessionId, JSON.stringify({ userId: randomUUID() }));
-  }
-
-  req.session = (await redis.get(sessionId)) as string;
-
   next();
 });
 
 app.use(
-  ORDERS_API_PREFIX,
+  '/orders',
   createProxyMiddleware({
     // http://localhost:3000/orders/bar -> http://localhost:3001/orders/bar
-    target: ORDERS_API_URL,
+    target: 'http://localhost:3001',
     changeOrigin: true,
     selfHandleResponse: true,
     onProxyReq(proxyReq, req, res) {
+      //pass session info to micro service
       proxyReq.setHeader('x-session', req.session);
     },
-    onProxyRes: responseInterceptor(
-      async (responseBuffer, proxyRes, req, res) => {
-        const contentType = proxyRes.headers['content-type'];
-
-        // detect json responses
-        if (!!contentType && contentType.includes('application/json')) {
-          let data = JSON.parse(responseBuffer.toString('utf8'));
-
-          // manipulate JSON data here to set auth response
-          if (!!(req as Request).sessionId) {
-            data = Object.assign({}, data, {
-              auth: (req as Request).sessionId,
-            });
-          }
-
-          // return manipulated JSON
-          return JSON.stringify(data);
-        }
-
-        // return other content-types as-is
-        return responseBuffer;
-      },
-    ),
+    onProxyRes: applyAuthToResponse, //---- (2)
   }),
+);
+
+app.use(
+  '/orderHistory',
+  createProxyMiddleware({
+    target: 'http://localhost:3002',
+    changeOrigin: true,
+    selfHandleResponse: true,
+    onProxyReq(proxyReq, req, res) {
+      //pass session info to micro service
+      proxyReq.setHeader('x-session', req.session);
+    },
+    onProxyRes: applyAuthToResponse, //---- (2)
+  }),
+);
+//-----
+
+const getSessionInfo = async (authHeader?: string) => {
+  //(For demo purpose) dummy random userId and sessionId created for first time, then userId is fetched gainst that sessionId for future requests
+  let sessionId = '';
+  let sessionData: string | null = '';
+
+  if (!!authHeader) {
+    sessionId = authHeader.split(/\s/)[1];
+  } else {
+    sessionId = 'SES_' + randomUUID(); //random new sessionId
+  }
+
+  const nodeRedisClient = getNodeRedisClient();
+  if (nodeRedisClient) {
+    const exists = await nodeRedisClient.exists(sessionId);
+    if (!exists) {
+      await nodeRedisClient.set(
+        sessionId,
+        JSON.stringify({ userId: 'USR_' + randomUUID() }),
+      ); //random new userId
+    }
+    sessionData = await nodeRedisClient.get(sessionId);
+  }
+
+  return {
+    sessionId: sessionId,
+    sessionData: sessionData,
+  };
+};
+
+const applyAuthToResponse = responseInterceptor(
+  //adding sessionId in response so that front end can store it for future requests
+
+  async (responseBuffer, proxyRes, req, res) => {
+    // detect json responses
+    if (
+      !!proxyRes.headers['content-type'] &&
+      proxyRes.headers['content-type'].includes('application/json')
+    ) {
+      let data = JSON.parse(responseBuffer.toString('utf8'));
+
+      // manipulate JSON data here
+      if (!!(req as Request).sessionId) {
+        data = Object.assign({}, data, { auth: (req as Request).sessionId });
+      }
+
+      // return manipulated JSON
+      return JSON.stringify(data);
+    }
+
+    // return other content-types as-is
+    return responseBuffer;
+  },
 );
 ```
 
@@ -125,7 +196,7 @@ The example above is not meant to be the defacto best practice for handling auth
 
 :::
 
-In the code above, we check for the authorization header, else we crreate a new one and store it in Redis. Then we retrieve the session from Redis. Further down the line we attach the session to an `x-session` header prior to calling into the orders service. Now let's see how the orders service receives the session.
+In the code above, we check for the authorization header, else we create a new one and store it in Redis. Then we retrieve the session from Redis. Further down the line we attach the session to an `x-session` header prior to calling into the orders service. Now let's see how the orders service receives the session.
 
 ```typescript
 router.post(API_NAMES.CREATE_ORDER, async (req: Request, res: Response) => {
@@ -134,18 +205,21 @@ router.post(API_NAMES.CREATE_ORDER, async (req: Request, res: Response) => {
     data: null,
     error: null,
   };
-  // highlight-next-line
-  const userId = JSON.parse(req.header('x-session') as string).userId as string;
+
+  const sessionData = req.header('x-session');
+  const userId = sessionData ? JSON.parse(sessionData).userId : "";
   ...
 });
 ```
 
-The hightlighted line above shows how to pull the session out of the `x-session` header and get the `userId`.
+The last line above shows how to pull the session out of the `x-session` header and get the `userId`.
 
 ## Conclusion
 
 That's all there is to it! You've now seen how to use Redis for API gateway caching. It is not too complicated to get started, but it will help you scale as you build out microservices. Check out additional resources below for learning more about Redis.
 
-## Additional Resources
+### Additional Resources
 
-<!-- TODO: Add links to other solutions tutorials here -->
+- [CQRS](/howtos/solutions/cqrs)
+- [Interservice communication](/howtos/solutions/interservice-communication)
+- [Query caching](/howtos/solutions/caching)
