--- a/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
@@ -7,6 +7,8 @@ authors: [prasan, will]
 ---
 
 import Authors from '@theme/Authors';
+import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
+import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
 
 <Authors frontMatter={frontMatter} />
 
@@ -36,46 +38,11 @@ Redis is an in-memory datastore, making it perfect for caching session data. It 
 
 ## Ecommerce (event-driven) architecture
 
-You eventually land on the following architecture:
-
-1. `products service` - handles querying products from the database and returning them to the frontend
-1. `orders service` - handles validating and creating orders
-1. `order history service` - handles querying a customer's order history
-1. `payments service` - handles processing orders for payment
-1. `api gateway` - unifies your services under a single endpoint
-1. `mongodb` - serves as the primary database, storing orders, order history, products, etc.
-
-Here is what the architecture diagram looks like so far:
-
-![Initial CQRS architecture](images/microservices-architecture-with-redis.png)
+<MicroservicesArchitectureWithRedis />
 
 ## Ecommerce product
 
-Consider below e-commerce application,
-
-- Dashboard to populate list of products
-
-  [TODO: dashboard image]
-
-- Shopping Cart to view added products
-  ![Shopping app frontend with Redis and MongoDB](images/frontend-cqrs-app-with-redis-and-mongodb.png)
-
-- Order confirmation page
-
-  [TODO: payment confirmation image]
-
-- Order history view (on Orders tab click in the top nav bar)
-
-  [TODO: order history image]
-
-You can find the full source code for the app pictured above here. The frontend is build using **Next.js**, the backend is in **Node.js**, data is stored in **MongoDB** and **Redis**.
-
-:::tip GITHUB CODE
-
-Source code for the application
-
-https://github.com/redis-developer/redis-microservices-ecommerce-solutions
-:::
+<MicroservicesEcommerceDesign />
 
 ## Sample API Gateway Caching Application with Redis and MongoDB
 
