--- a/docs/howtos/solutions/interservice-communication/index-interservice-communication.mdx
+++ b/docs/howtos/solutions/interservice-communication/index-interservice-communication.mdx
@@ -7,6 +7,8 @@ authors: [prasan, will]
 ---
 
 import Authors from '@theme/Authors';
+import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
+import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
 
 <Authors frontMatter={frontMatter} />
 
@@ -42,19 +44,7 @@ When there are microservices, you obviously need some way of communication betwe
 
 ## Ecommerce micro services architecture
 
-Thinking about the e-commerce application, consider the following architecture:
-
-1. `products service` - handles querying products from the database and returning them to the frontend
-1. `orders service` - handles validating and creating orders
-1. `order history service` - handles querying a customer's order history
-1. `payments service` - handles processing orders for payment
-1. `api gateway` - unifies your services under a single endpoint
-1. `mongodb` - serves as the primary database, storing orders, order history, products, etc.
-1. `redis` - serves as the stream processor and caching database
-
-Here is what the architecture diagram looks like so far:
-
-![Microservices streaming architecture with Redis](images/microservices-inter-services.png)
+<MicroservicesArchitectureWithRedis />
 
 ## Using Redis for Interservice Communication in an Event-driven Architecture
 
@@ -150,31 +140,7 @@ Let's outline the streams and events used below:
 
 ## Ecommerce product
 
-Consider below e-commerce application,
-
-- Dashboard to populate list of products
-
-  [TODO: dashboard image]
-
-- Shopping Cart to view added products
-  ![Shopping app frontend with Redis and MongoDB](images/frontend-cqrs-app-with-redis-and-mongodb.png)
-
-- Order confirmation page
-
-  [TODO: payment confirmation image]
-
-- Order history view (on Orders tab click in the top nav bar)
-
-  [TODO: order history image]
-
-You can find the full source code for the app pictured above here. The frontend is build using **Next.js**, the backend is in **Node.js**, data is stored in **MongoDB** and **Redis**.
-
-:::tip GITHUB CODE
-
-Source code for the application
-
-https://github.com/redis-developer/redis-microservices-ecommerce-solutions
-:::
+<MicroservicesEcommerceDesign />
 
 ## Sample Interservice Communication Application with Redis and MongoDB
 
