--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Friday, March 3         | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 4][twitch]                                           |
 | Tuesday, March 14       | 1:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Plane Spotting with Redis  - Episode 5][twitch]                                   |
 
   </TabItem>
@@ -44,6 +43,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Friday, March 3        | 5:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Episode 4][90]                                           |
 | Thursday, March 2      | 2:00 PM UTC  | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 4][89]                    |
 | Friday, February 24    | 12:00 PM UTC | [Simon Prickett][simon]                                                                               | [Simon's Redis IoT Show: Plane Spotting with Redis and Node.js Episode 3][88]                    |
 | Tuesday, February 21   | 7:00 PM UTC  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case A Game! Ep 3][87]                                                |
@@ -184,6 +184,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[90]: https://www.youtube.com/watch?v=23wgOHLX68c
 [89]: https://www.youtube.com/watch?v=fYnrNqSgqR4
 [88]: https://www.youtube.com/watch?v=IEx2WgWdhIA
 [87]: https://www.youtube.com/watch?v=zWJ2mQOXlq8
