copy editing and image min for solutions tutorials

--- a/docs/howtos/solutions/caching/index-caching.mdx
+++ b/docs/howtos/solutions/caching/index-caching.mdx
@@ -9,40 +9,36 @@ authors: [prasan, will]
 import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
 import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
+import SourceCode from '../common-data/microservices-source-code-tip.mdx';
 
 <Authors frontMatter={frontMatter} />
 
-:::tip GITHUB CODE
+<SourceCode />
 
-Source code for the application used in tutorial
-
-https://github.com/redis-developer/redis-microservices-ecommerce-solutions
-
-:::
-
-## Query caching
+## What is Query Caching?
 
 Have you ever been in a situation where your database queries are slowing down, and you need to speed them up while keeping costs down? Imagine that you've built an e-commerce application that started small and is growing fast.
 
 You're at the point where you have an extensive product catalog and millions of customers. Your queries to MongoDB are beginning to slow down, and you've already attempted to optimize them. Even though you were able to squeak out a little extra performance, it wasn't enough to satisfy your customers.
 
-## Why you should use Redis for Query Caching
+## Why You Should Use Redis for Query Caching
 
 Redis is an in-memory datastore, making it perfect for caching. It allows you to reduce the load on your primary database while speeding up database reads.
+
 For example, in an e-commerce application you might be able to guess what query is requested most often... If you guessed the query for searching products you would be correct!
 
 To improve product search in ecommerce app, we can implement one of following caching patterns
 
-- **Lookup** pattern : Entire products can be pre cached in redis and application can perform any product query on Redis similar to primary database
-- **Cache aside** pattern : Only searched/ frequent product queries need to be cached for faster results.
+- **Lookup pattern**: Entire products can be pre-cached in Redis and the application can perform any product query on Redis similar to primary database
+- **Cache-aside** pattern: Redis is filled on-demand based on whatever search parameters are requested by the frontend.
 
-This tutorial focuses on **cache-aside** pattern specifically :
+This tutorial focuses on the **cache-aside** pattern, which operates as follows:
 
-![cache-aside](images/cache-aside.jpg)
+![cache-aside with Redis and MongoDB](images/cache-aside.jpg)
 
-The goal of this design pattern is to set up **optimal** caching (load it as you go) for better read operations.
+The goal of this design pattern is to set up **optimal** caching (load as you go) for better read operations.
 
-To see how the cache aside pattern functions
+To understand how the cache-aside pattern functions, consider the following process:
 
 1. An application requests data from the backend
 2. The backend checks to find out if the data is available in Redis
@@ -53,21 +49,21 @@ To see how the cache aside pattern functions
    2. If the data is already available in Redis (a cache hit):
       - The backend serves the cached data directly to the application
 
-Consider using it when you need to:
+The cache-aside pattern is useful when you need to:
 
 1. **Query data frequently** - When you have a large volume of reads (as is the case in an e-commerce app), the cache-aside pattern will give you an immediate performance gain for subsequent data requests.
-1. **Fill the cache on-demand** - The cache-aside pattern will fill the cache as data is requested rather pre caching,thus saving on space and cost. Useful when kind of data to be cached is unclear upfront.
-1. **Be cost conscious** - Since cache size is directly related to the cost of cache in the cloud, the smaller the size, the less you pay.
+1. **Fill the cache on-demand** - The cache-aside pattern will fill the cache as data is requested rather than pre-caching, thus saving on space and cost. Useful when it isn't clear what data will need to be cached.
+1. **Be cost conscious** - Since cache size is directly related to the cost of cache storage in the cloud, the smaller the size, the less you pay.
 
-## Ecommerce micro services architecture
+## Microservices Architecture for an E-commerce Application
 
 <MicroservicesArchitectureWithRedis />
 
-## Ecommerce product
+## E-commerce Application Frontend using Next.js and Tailwind
 
 <MicroservicesEcommerceDesign />
 
-## Sample Caching Application with Redis and MongoDB
+## Caching in a Microservices Application with Redis and MongoDB
 
 In our sample application, the products service publishes an API for filtering products. Here is what a call to the API looks like:
 
@@ -80,9 +76,9 @@ In our sample application, the products service publishes an API for filtering p
 }
 ```
 
-### Get Products by Filter Response
+### Get Products by Filter Response (Cache Miss)
 
-```json
+```json {30}
 {
   "data": [
     {
@@ -116,15 +112,15 @@ In our sample application, the products service publishes an API for filtering p
 }
 ```
 
-### Get Products by Filter Response (subsequent times)
+### Get Products by Filter Response (Cache Hit)
 
-```json
+```json {6}
 {
   "data": [
     //...same data as above
   ],
   "error": null,
-  "isFromCache": true //now the data comes from cache rather DB
+  "isFromCache": true // now the data comes from the cache rather DB
 }
 ```
 
@@ -185,9 +181,9 @@ async function getProductsByFilter(productFilter: IProductFilter) {
 }
 ```
 
-If you're familiar with MongoDB, the code above should be pretty straightforward. We simply make a call to MongoDB to find products based on a filter on the `displayName` property of the product. We also define a projection object to specify which properties to get out of MongoDB. You can setup multiple columns for better fuzzy searching, but for the purposes of this tutorial it is simplified.
+If you're familiar with MongoDB, the code above should be pretty straightforward. We simply make a call to MongoDB to find products based on a filter on the `displayName` property of the product. We also define a projection object to specify which properties to get out of MongoDB. You can set up multiple columns for better fuzzy searching, but for the purposes of this tutorial it is simplified.
 
-Now, using MongoDB directly worked for awhile and eventually started to slow down. That's why Redis was brought in to speed things up. The cache-aside pattern was chosen in order to balance performance with cost. The basic decision tree for cache-aside is as follows.
+Now, using MongoDB directly without Redis will work for a while, and eventually start to slow down. That's why Redis is brought in to speed things up. The cache-aside pattern was chosen in order to balance performance with cost. The basic decision tree for cache-aside is as follows.
 
 When the frontend requests products:
 
@@ -222,13 +218,13 @@ router.post(API.GET_PRODUCTS_BY_FILTER, async (req: Request, res: Response) => {
     result.data = docArr;
     result.isFromCache = true;
   } else {
-    //get data from mongodb
+    // get data from mongodb
     const dbData = await getProductsByFilter(body); //method shown earlier
 
     if (body && body.productDisplayName && dbData.length) {
-      //set data to redis (async)
+      // set data in redis (no need to wait)
       redis.set(hashKey, JSON.stringify(dbData), {
-        EX: 60, //cache expiry in seconds
+        EX: 60, // cache expiration in seconds
       });
     }
 
@@ -247,10 +243,14 @@ You will need to decide what expiry or time to live (TTL) works best for your pa
 
 ## Conclusion
 
-That's all there is to it! You've now seen how to use Redis for caching with one of the pattern (cache-aside). It's possible to incrementally adopt Redis where ever needed with different strategies/ patterns. See below for some additional resources around microservices topic.
+That's all there is to it! You've now seen how to use Redis for caching with one of the most common caching patterns (cache-aside). It's possible to incrementally adopt Redis wherever needed with different strategies/ patterns. See below for some additional resources around microservices topic.
 
 ### Additional Resources
 
 - [CQRS](/howtos/solutions/cqrs)
 - [Interservice communication](/howtos/solutions/interservice-communication)
 - [API gateway caching](/howtos/solutions/api-gateway-caching)
+
+## Learn More
+
+If you're interested in diving deeper, try [Redis Enterprise](https://redis.com/try-free) today for free!
