--- a/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
+++ b/docs/howtos/solutions/api-gateway-caching/index-api-gateway-caching.mdx
@@ -9,22 +9,19 @@ authors: [prasan, will]
 import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
 import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
+import SourceCode from '../common-data/microservices-source-code-tip.mdx';
 
 <Authors frontMatter={frontMatter} />
 
-:::tip GITHUB CODE
+<SourceCode />
 
-Source code for the application used in this tutorial
+## What is API Gateway Caching?
 
-https://github.com/redis-developer/redis-microservices-ecommerce-solutions
-:::
+So you are building a microservices application, but you're struggling with how to handle authentication in a way that lets you reuse code and maximize performance. Typically for authentication you might use sessions, OAuth, authorization tokens, etc. For the purposes of this tutorial, let's say we're using an authorization token. In a monolithic application authentication is pretty straightforward:
 
-## API Gateway Caching
-
-So you are building a microservices application, but you're struggling with how to handle authentication in a way that let's you reuse code and maximize performance. Typically for authentication you might you sessions, oauth, authorization tokens, etc. For the purposes of this tutorial, let's say we're using an authorization token. In a monolithic application authentication is pretty straightforward:
 When a request comes in...
 
-1. Decode the authorization header
+1. Decode the `Authorization` header
 1. Validate the credentials
 1. Store the session information on the request for further use down the line
 
@@ -32,23 +29,23 @@ However, you might be left puzzled by how to accomplish something similar with m
 
 Great, you've decided to handle authentication at the API gateway layer. Now you have to decide where to store sessions. Imagine you're building an e-commerce app that uses MongoDB as the primary data store. You could store sessions in MongoDB, but think about how many times you will be hitting MongoDB to retrieve session information. If you have millions of customers, you don't want to be going to MongoDB for every single request made to the API. This is where Redis comes in.
 
-## Why you should use Redis for API Gateway Caching
+## Why You Should Use Redis for API Gateway Caching
 
 Redis is an in-memory datastore, making it perfect for caching session data. It allows you to reduce the load on your primary database while speeding up database reads. The rest of this tutorial covers how to do this in the context of an e-commerce application.
 
-## Ecommerce (event-driven) architecture
+## Microservices Architecture for an E-commerce Application
 
 <MicroservicesArchitectureWithRedis />
 
-## Ecommerce product
+## E-commerce Application Frontend using Next.js and Tailwind
 
 <MicroservicesEcommerceDesign />
 
-## Sample API Gateway Caching Application with Redis and MongoDB
+## API Gateway Caching in a Microservices Application with Redis and MongoDB
 
-What's nice about microservice architecture is each service is setup so it can scale independently. Now, seeing as how each service might require authentication, you will likely want to obtain session information for almost every request. So it makes a lot of sense to use the API gateway to cache and retrieve session information, and subsequently pass the information on to each service. Let's see how you might accomplish this.
+What's nice about a microservice architecture is each service is set up so it can scale independently. Now, seeing as how each service might require authentication, you will likely want to obtain session information for most requests. Therefore, it makes a lot of sense to use the API gateway to cache and retrieve session information and subsequently pass the information on to each service. Let's see how you might accomplish this.
 
-In our sample application, all requests are routed through the API gateway. We are using Express to setup our API gateway and we're using the `Authorization` header to pass the authorization token from the frontend to the API. For every request, the API gateway gets the authorization token and looks it up in Redis. Then it passes it along to the correct microservice. Below you will find the code to validate the session:
+In our sample application, all requests are routed through the API gateway. We are using [Express](https://expressjs.com/) to set up our API gateway and we're using the `Authorization` header to pass the authorization token from the frontend to the API. For every request, the API gateway gets the authorization token and looks it up in Redis. Then it passes it along to the correct microservice. Below you will find the code to validate the session:
 
 ```typescript
 import {
@@ -80,7 +77,7 @@ app.use(
     changeOrigin: true,
     selfHandleResponse: true,
     onProxyReq(proxyReq, req, res) {
-      //pass session info to micro service
+      // pass session info to microservice
       proxyReq.setHeader('x-session', req.session);
     },
     onProxyRes: applyAuthToResponse, //---- (2)
@@ -94,7 +91,7 @@ app.use(
     changeOrigin: true,
     selfHandleResponse: true,
     onProxyReq(proxyReq, req, res) {
-      //pass session info to micro service
+      // pass session info to microservice
       proxyReq.setHeader('x-session', req.session);
     },
     onProxyRes: applyAuthToResponse, //---- (2)
@@ -103,14 +100,14 @@ app.use(
 //-----
 
 const getSessionInfo = async (authHeader?: string) => {
-  //(For demo purpose) dummy random userId and sessionId created for first time, then userId is fetched gainst that sessionId for future requests
+  // (For demo purpose only) random userId and sessionId values are created for first time, then userId is fetched gainst that sessionId for future requests
   let sessionId = '';
   let sessionData: string | null = '';
 
   if (!!authHeader) {
     sessionId = authHeader.split(/\s/)[1];
   } else {
-    sessionId = 'SES_' + randomUUID(); //random new sessionId
+    sessionId = 'SES_' + randomUUID(); // generate random new sessionId
   }
 
   const nodeRedisClient = getNodeRedisClient();
@@ -120,7 +117,7 @@ const getSessionInfo = async (authHeader?: string) => {
       await nodeRedisClient.set(
         sessionId,
         JSON.stringify({ userId: 'USR_' + randomUUID() }),
-      ); //random new userId
+      ); // generate random new userId
     }
     sessionData = await nodeRedisClient.get(sessionId);
   }
@@ -132,7 +129,7 @@ const getSessionInfo = async (authHeader?: string) => {
 };
 
 const applyAuthToResponse = responseInterceptor(
-  //adding sessionId in response so that front end can store it for future requests
+  // adding sessionId to the response so that front end can store it for future requests
 
   async (responseBuffer, proxyRes, req, res) => {
     // detect json responses
@@ -157,15 +154,15 @@ const applyAuthToResponse = responseInterceptor(
 );
 ```
 
-:::note
+:::info
 
-The example above is not meant to be the defacto best practice for handling authentication. It is meant to illustrate what you might do with respect to Redis. You will likely have a different setup for authentication, but the concept of storing a session in Redis is similar.
+The example above is not meant to be the de facto best practice for handling authentication. It is meant to illustrate what you might do with respect to Redis. You will likely have a different setup for authentication, but the concept of storing a session in Redis is similar.
 
 :::
 
-In the code above, we check for the authorization header, else we create a new one and store it in Redis. Then we retrieve the session from Redis. Further down the line we attach the session to an `x-session` header prior to calling into the orders service. Now let's see how the orders service receives the session.
+In the code above, we check for the `Authorization` header, else we create a new one and store it in Redis. Then we retrieve the session from Redis. Further down the line we attach the session to the `x-session` header prior to calling the orders service. Now let's see how the orders service receives the session.
 
-```typescript
+```typescript {9}
 router.post(API_NAMES.CREATE_ORDER, async (req: Request, res: Response) => {
   const body = req.body;
   const result: IApiResponseBody = {
@@ -179,7 +176,7 @@ router.post(API_NAMES.CREATE_ORDER, async (req: Request, res: Response) => {
 });
 ```
 
-The last line above shows how to pull the session out of the `x-session` header and get the `userId`.
+The highlighted line above shows how to pull the session out of the `x-session` header and get the `userId`.
 
 ## Conclusion
 
@@ -190,3 +187,7 @@ That's all there is to it! You've now seen how to use Redis for API gateway cach
 - [CQRS](/howtos/solutions/cqrs)
 - [Interservice communication](/howtos/solutions/interservice-communication)
 - [Query caching](/howtos/solutions/caching)
+
+## Learn More
+
+If you're interested in diving deeper, try [Redis Enterprise](https://redis.com/try-free) today for free!
