updated RedisEnterprise section and moved it to common

--- a/docs/howtos/solutions/cqrs/index-cqrs.mdx
+++ b/docs/howtos/solutions/cqrs/index-cqrs.mdx
@@ -10,6 +10,7 @@ import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
 import InitialMicroservicesArchitecture from '../common-data/microservices-arch.mdx';
 import SourceCode from '../common-data/microservices-source-code-tip.mdx';
+import RedisEnterprise from '../common-data/redis-enterprise.mdx';
 
 import cqrsPattern from './images/cqrs-pattern.png';
 
@@ -289,7 +290,9 @@ Hopefully this tutorial has helped you visualize how you might use Redis with th
 - [Interservice communication](/howtos/solutions/interservice-communication)
 - [Query caching](/howtos/solutions/caching)
 - [API gateway caching](/howtos/solutions/api-gateway-caching)
+- [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
+- Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 
 ## Learn More
 
-If you're interested in diving deeper, try [Redis Enterprise](https://redis.com/try-free) today for free!
+<RedisEnterprise />
