--- a/docs/howtos/solutions/caching/index-caching.mdx
+++ b/docs/howtos/solutions/caching/index-caching.mdx
@@ -10,6 +10,7 @@ import Authors from '@theme/Authors';
 import MicroservicesEcommerceDesign from '../common-data/microservices-ecommerce.mdx';
 import MicroservicesArchitectureWithRedis from '../common-data/microservices-arch-with-redis.mdx';
 import SourceCode from '../common-data/microservices-source-code-tip.mdx';
+import RedisEnterprise from '../common-data/redis-enterprise.mdx';
 
 <Authors frontMatter={frontMatter} />
 
@@ -250,7 +251,9 @@ That's all there is to it! You've now seen how to use Redis for caching with one
 - [CQRS](/howtos/solutions/cqrs)
 - [Interservice communication](/howtos/solutions/interservice-communication)
 - [API gateway caching](/howtos/solutions/api-gateway-caching)
+- [Redis YouTube channel](https://www.youtube.com/c/Redisinc)
+- Clients like [Node Redis](https://github.com/redis/node-redis) and [Redis om Node](https://github.com/redis/redis-om-node) help you to use Redis in Node.js applications.
 
 ## Learn More
 
-If you're interested in diving deeper, try [Redis Enterprise](https://redis.com/try-free) today for free!
+<RedisEnterprise />
