--- a/docs/howtos/solutions/common-data/microservices-arch.mdx
+++ b/docs/howtos/solutions/common-data/microservices-arch.mdx
@@ -4,9 +4,11 @@ You eventually land on the following architecture:
 1. `orders service` - handles validating and creating orders
 1. `order history service` - handles querying a customer's order history
 1. `payments service` - handles processing orders for payment
-1. `api gateway` - unifies your services under a single endpoint
-1. `mongodb` - serves as the primary database, storing orders, order history, products, etc.
+1. `api gateway` - unifies the services under a single endpoint
+1. `mongodb` - serves as the write-optimized database, storing orders, order history, products, etc.
 
-Here is what the architecture diagram looks like so far:
+:::info
 
-![Initial CQRS architecture](images/initial-microservices-arch.png)
+You do not need to use MongoDB as your write-optimized database, you can use other databases such as a SQL database as well.
+
+:::
